# Envyro

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PERF.md  MERGE_CONFLICT_RESOLUTION.md  PERFORMANCE.md  README.md  RELEASE.md  TECHNICAL_SUMMARY.md  comprehensive_test.py  docker-compose.yml  envyro_launcher.py  example.py  init_db.sql  launch.py  migrate_security.py  requirements.txt  setup_admiral.py  test_interactions.py  test_structure.py  untitled:Untitled-2  # Add a blank line after the heading
.github/ISSUE_TEMPLATE/: bug_report.md  help.md
.github/workflows/: ci.yml  release.yml
.zencoder/rules/: repo.md
enviro-core/: Cargo.toml  build.rs
enviro-core/examples/: benchmark.rs
enviro-core/src/: lib.rs  lib.rs  # (add a test module at the bottom of this file)  main.rs  memory.rs  perf.rs  runtime.rs
enviro-core/src/engine/: buffer.rs  cow_resources.rs  io_uring.rs  isolation.rs  lazy_init.rs  memory_pool.rs  mod.rs  namespace_cache.rs  parallel_setup.rs  resource_limits.rs
enviro-core/src/executor/: mod.rs
enviro-core/src/ffi/: mod.rs
enviro-core/src/plugin/: mod.rs
enviro-core/tests/: benchmarks.rs
enviro-go/: go.mod  libenviro_go.h
enviro-go/pkg/control/: control.go
enviro-go/pkg/network/: network.go
enviro-py/: pyproject.toml
enviro-py/enviro/: __init__.py
enviro-py/examples/: example_envirofile.py
enviro-zig/: build.zig  build.zig.zon
enviro-zig/src/: allocator.zig  oom_tuner.zig
envyro_core/: __init__.py  config.py  envyro_ai.py  secure_config.py  security.py
envyro_core/memory/: __init__.py  vector_memory.py
envyro_core/models/: __init__.py  transformer.py
envyro_core/utils/: __init__.py
