[workspace]
members = ["enviro-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Enviro Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1090mb/Enviro"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
