[package]
name = "enviro-core"
version = "0.1.0"
edition = "2021"
authors = ["Enviro Contributors"]
description = "High-performance, zero-trust containerization engine"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime - The Heart
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = "0.7"

# Low-level Linux primitives
nix = { version = "0.27", features = ["user", "process", "mount", "sched"] }

# Dynamic plugin loading
libloading = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# gRPC client for Go control plane
tonic = "0.10"
prost = "0.12"

# CRIU integration
libc = "0.2"

[build-dependencies]
# For compiling Zig and Go components
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "enviro_core"
path = "src/lib.rs"

[[bin]]
name = "enviro"
path = "src/main.rs"

[features]
default = []
io_uring = []
