[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "enviro-py"
version = "0.1.0"
description = "Python SDK for Enviro container runtime"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
keywords = ["containers", "runtime", "docker", "enviro"]
authors = [
    { name = "Enviro Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/1090mb/Enviro"
Repository = "https://github.com/1090mb/Enviro"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "enviro._native"
